--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img src="/assets/img/Ariana-Grande-logo-white.png" alt="Ariana Grande" /></a>
+    <a class="navbar-brand" href="#"><img src="https://jky.graphics/UMG/assets/img/Ariana-Grande-logo-white.png" alt="Ariana Grande" /></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -16,12 +16,7 @@
           <a routerLink="/tour" class="nav-item">Tours</a>
         </li>
       </ul>
-      <!--
-        <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    -->
+      
     </div>
   </div>
 </nav>
