--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,19 +8,16 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" id="carousel1">
-        <!--<img src="https://www.billboard.com/wp-content/uploads/2020/03/ariana-grande-grammys-2020-ap-u-billboard-1548-1584374324.jpg?w=1024." class="d-block w-100" alt="...">-->
         <div class="carousel-caption d-none d-md-block">
           <h5>First slide label</h5>
         </div>
       </div>
       <div class="carousel-item" id="carousel2">
-        <!--<img src="https://www.giantfreakinrobot.com/wp-content/uploads/2020/04/arianagrande-scaled.jpeg" class="d-block w-100" alt="...">-->
         <div class="carousel-caption d-none d-md-block">
           <h5>Second slide label</h5>
         </div>
       </div>
       <div class="carousel-item" id="carousel3">
-        <!--<img id="carousel3" src="https://assets.teenvogue.com/photos/5c4dfec99eeaf112b818b929/16:9/w_2560%2Cc_limit/lede-3.jpg" class="d-block w-100" alt="...">-->
         <div class="carousel-caption d-none d-md-block">
           <h5>Third slide label</h5>
         </div>
@@ -57,7 +54,6 @@
       </div>
       <div class="videoContainer" id="youTubeVid">
 
-
         <iframe width="100%" height="500px" src="https://www.youtube.com/embed/tcYodQoapMg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <iframe width="100%" height="500px" src="https://www.youtube.com/embed/kHLHSlExFis" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -73,7 +69,7 @@
   <div class="code code--small code--left">
       <div class="card col-lg-4 col-md-6 col-sm-12">
           <p>
-          <a href="#"><img src="/assets/img/banner-newSingle.jpg" alt="Listen to the New Single"></a>
+          <a href="#"><img src="https://jky.graphics/UMG/assets/img/banner-newSingle.jpg" alt="Listen to the New Single"></a>
           </p>
       </div>
   </div>
@@ -86,7 +82,7 @@
         <h2>2022 Tour</h2>
         <div class="card col-lg-4 col-md-6 col-sm-12">
         <div class="card-body">
-            <img src="/assets/img/location-northCarolina.jpg" class="card-img-top" alt="...">
+            <img src="https://jky.graphics/UMG/assets/img/location-northCarolina.jpg" class="card-img-top" alt="Jan 21-24, Greeensboro">
             <h3 class="card-title">Jan <span class="dates">21 - 24</span></h3>
             <p class="card-text"><span class="location">Greensboro</span>Greensboro Coliseum<br />
             <a href="#" class="btn btn-primary">View Detail</a></p>
@@ -95,7 +91,7 @@
     
         <div class="card col-lg-4 col-md-6 col-sm-12">
         <div class="card-body">
-            <img src="/assets/img/location-portland.jpg" class="card-img-top" alt="...">
+            <img src="https://jky.graphics/UMG/assets/img/location-portland.jpg" class="card-img-top" alt="Jan 27-30, Portland">
             <h3 class="card-title">Jan <span class="dates">27 - 30</span></h3>
             <p class="card-text"><span class="location">Portland</span>Rose Garden Arena<br />
             <a href="#" class="btn btn-primary">View Detail</a></p>
@@ -104,7 +100,7 @@
     
         <div class="card col-lg-4 col-md-6 col-sm-12">
         <div class="card-body">
-            <img src="/assets/img/location-idaho.jpg" class="card-img-top" alt="...">
+            <img src="https://jky.graphics/UMG/assets/img/location-idaho.jpg" class="card-img-top" alt="Feb 2-3, Nampa">
             <h3 class="card-title">Feb <span class="dates">2 - 3</span></h3>
             <p class="card-text"><span class="location">Nampa</span>Ford Arean<br />
             <a href="#" class="btn btn-primary">View Detail</a></p>
@@ -113,7 +109,7 @@
 
         <div class="card col-lg-4 col-md-6 col-sm-12">
         <div class="card-body">
-            <img src="/assets/img/location-twinLakes.jpg" class="card-img-top" alt="...">
+            <img src="https://jky.graphics/UMG/assets/img/location-twinLakes.jpg" class="card-img-top" alt="Feb 5 - 7, Twin Lakes">
             <h3 class="card-title">Feb <span class="dates">5-7</span></h3>
             <p class="card-text"><span class="location">Twin Lakes</span>Country Thunder Festival<br />
             <a href="#" class="btn btn-primary">View Detail</a></p>
@@ -122,7 +118,7 @@
 
         <div class="card col-lg-4 col-md-6 col-sm-12">
         <div class="card-body">
-            <img src="/assets/img/location-losAngeles.jpg" class="card-img-top" alt="...">
+            <img src="https://jky.graphics/UMG/assets/img/location-losAngeles.jpg" class="card-img-top" alt="Feb 9 - 11, Los Angeles">
             <h3 class="card-title">Feb <span class="dates">9-11</span></h3>
             <p class="card-text"><span class="location">Los Angeles</span>Staple Center<br />
             <a href="#" class="btn btn-primary">View Detail</a></p>
@@ -131,7 +127,7 @@
 
         <div class="card col-lg-4 col-md-6 col-sm-12">
         <div class="card-body">
-            <img src="/assets/img/location-sanDiego.jpg" class="card-img-top" alt="...">
+            <img src="https://jky.graphics/UMG/assets/img/location-sanDiego.jpg" class="card-img-top" alt="Feb 13 - 15, San Diego">
             <h3 class="card-title">Feb <span class="dates">13-15</span></h3>
             <p class="card-text"><span class="location">San Diego</span>Valley View Casino Center<br />
             <a href="#" class="btn btn-primary">View Detail</a></p>
@@ -184,91 +180,91 @@
       <div id="grid" class="row my-shuffle-container">
       
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Sweaters"]' data-date-created="2017-04-30" data-title="Lake Walchen">
-          <img src="/assets/img/merch-sweater.png" alt="Position Sweater" />
+          <img src="https://jky.graphics/UMG/assets/img/merch-sweater.png" alt="Position Sweater" />
           <div class="merchName">Positions Photo Longsleeve T-shirt II</div>
           <div class="merchPrice">$45.00</div>
           <a href="#" class="btn btn-primary">Add to Cart</a>
         </figure>
 
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Albums"]' data-date-created="2017-04-30" data-title="Lake Walchen">
-          <img src="/assets/img/merch-album.png" alt="Position Sweater" />
+          <img src="https://jky.graphics/UMG/assets/img/merch-album.png" alt="Position Sweater" />
           <div class="merchName">Positions LP</div>
           <div class="merchPrice">$28.00</div>
           <a href="#" class="btn btn-primary">Add to Cart</a>
         </figure>
 
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Sweaters"]' data-date-created="2017-04-30" data-title="Lake Walchen">
-          <img src="/assets/img/merch-shirt.png" alt="Position Sweater" />
+          <img src="https://jky.graphics/UMG/assets/img/merch-shirt.png" alt="Position Sweater" />
           <div class="merchName">Positions Photo Longsleeve T-shirt II</div>
           <div class="merchPrice">$45.00</div>
           <a href="#" class="btn btn-primary">Add to Cart</a>
         </figure>
 
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Albums"]' data-date-created="2017-04-30" data-title="Lake Walchen">
-         <img src="/assets/img/merch-album2.png" alt="Position Sweater" />
+         <img src="https://jky.graphics/UMG/assets/img/merch-album2.png" alt="Position Sweater" />
          <div class="merchName">Positions LP</div>
           <div class="merchPrice">$28.00</div>
           <a href="#" class="btn btn-primary">Add to Cart</a>
         </figure>
 
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Sweaters"]' data-date-created="2017-04-30" data-title="Lake Walchen">
-          <img src="/assets/img/merch-sweater.png" alt="Position Sweater" />
+          <img src="https://jky.graphics/UMG/assets/img/merch-sweater.png" alt="Position Sweater" />
           <div class="merchName">Positions Photo Longsleeve T-shirt II</div>
           <div class="merchPrice">$45.00</div>
           <a href="#" class="btn btn-primary">Add to Cart</a>
         </figure>
 
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Merch"]' data-date-created="2017-04-30" data-title="Lake Walchen">
-          <img src="/assets/img/merch-album3.png" alt="Position Sweater" />
+          <img src="https://jky.graphics/UMG/assets/img/merch-album3.png" alt="Position Sweater" />
           <div class="merchName">Positions Photo Longsleeve T-shirt II</div>
           <div class="merchPrice">$45.00</div>
           <a href="#" class="btn btn-primary">Add to Cart</a>
         </figure>
 
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Albums"]' data-date-created="2017-04-30" data-title="Lake Walchen">
-          <img src="/assets/img/merch-album.png" alt="Position Sweater" />
+          <img src="https://jky.graphics/UMG/assets/img/merch-album.png" alt="Position Sweater" />
           <div class="merchName">Positions LP</div>
           <div class="merchPrice">$28.00</div>
           <a href="#" class="btn btn-primary">Add to Cart</a>
         </figure>
 
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Sweaters"]' data-date-created="2017-04-30" data-title="Lake Walchen">
-          <img src="/assets/img/merch-sweater.png" alt="Position Sweater" />
+          <img src="https://jky.graphics/UMG/assets/img/merch-sweater.png" alt="Position Sweater" />
           <div class="merchName">Positions Photo Longsleeve T-shirt II</div>
           <div class="merchPrice">$45.00</div>
           <a href="#" class="btn btn-primary">Add to Cart</a>
         </figure>
         
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Sweaters"]' data-date-created="2017-04-30" data-title="Lake Walchen">
-          <img src="/assets/img/merch-sweater2.png" alt="Position Sweater" />
+          <img src="https://jky.graphics/UMG/assets/img/merch-sweater2.png" alt="Position Sweater" />
           <div class="merchName">Positions Photo Longsleeve T-shirt II</div>
           <div class="merchPrice">$45.00</div>
           <a href="#" class="btn btn-primary">Add to Cart</a>
         </figure>
 
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Merch"]' data-date-created="2017-04-30" data-title="Lake Walchen">
-          <img src="/assets/img/merch-album3.png" alt="Position Sweater" />
+          <img src="https://jky.graphics/UMG/assets/img/merch-album3.png" alt="Position Sweater" />
           <div class="merchName">Positions Deluxe CD Box</div>
           <div class="merchPrice">$50.00</div>
           <a href="#" class="btn btn-primary">Add to Cart</a>
         </figure>
 
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Sweaters"]' data-date-created="2017-04-30" data-title="Lake Walchen">
-          <img src="/assets/img/merch-sweater2.png" alt="Position Sweater" />
+          <img src="https://jky.graphics/UMG/assets/img/merch-sweater2.png" alt="Position Sweater" />
           <div class="merchName">Positions Photo Longsleeve T-shirt II</div>
           <div class="merchPrice">$45.00</div>
           <a href="#" class="btn btn-primary">Add to Cart</a>
         </figure>
 
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Sweaters"]' data-date-created="2017-04-30" data-title="Lake Walchen">
-          <img src="/assets/img/merch-shirt.png" alt="Position Sweater" />
+          <img src="https://jky.graphics/UMG/assets/img/merch-shirt.png" alt="Position Sweater" />
           <div class="merchName">Positions Photo Longsleeve T-shirt II</div>
           <div class="merchPrice">$45.00</div>
           <a href="#" class="btn btn-primary">Add to Cart</a>
         </figure>
 
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Sweaters"]' data-date-created="2017-04-30" data-title="Lake Walchen">
-          <img src="/assets/img/merch-sweater.png" alt="Position Sweater" />
+          <img src="https://jky.graphics/UMG/assets/img/merch-sweater.png" alt="Position Sweater" />
           <div class="merchName">Positions Photo Longsleeve T-shirt II</div>
           <div class="merchPrice">$45.00</div>
           <a href="#" class="btn btn-primary">Add to Cart</a>
