fixed broken link

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -151,13 +151,13 @@
             <h3>With Ariana Merch</h3>
             <p>Albums, T-Shirts, Mugs, and Mcuh More!</p>
             <div class="merchCell col-lg-6 col-12">
-              <img class="merchImage" src="/assets/img/merch-sweater.png" alt="Positin Sweater" />
+              <img class="merchImage" src="https://jky.graphics/UMG/assets/img/merch-sweater.png" alt="Positin Sweater" />
               <div class="merchName">Positions Photo Longsleeve T-shirt II</div>
               <div class="merchPrice">$45.00</div>
               <a href="#" class="btn btn-primary">Add to Cart</a>
             </div>
             <div class="merchCell col-lg-6 col-12">
-              <img class="merchImage" src="/assets/img/merch-album.png" alt="Position Album" />
+              <img class="merchImage" src="https://jky.graphics/UMG/assets/img/merch-album.png" alt="Position Album" />
               <div class="merchName">Positions LP</div>
               <div class="merchPrice">$28.00</div>
               <a href="#" class="btn btn-primary">Add to Cart</a>
