pushing the latest change after Due Date

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -84,7 +84,7 @@
         <h2>2022 Tour</h2>
         <div class="card col-lg-4 col-md-6 col-sm-12">
         <div class="card-body">
-            <img src="https://jky.graphics/UMG/assets/img/location-northCarolina.jpg" class="card-img-top" alt="Jan 21-24, Greeensboro">
+            <img src="https://jky.graphics/UMG/assets/img/location-northCarolina.jpg" class="card-img-top" alt="Jan 21-24, Greeensboro" />
             <h3 class="card-title">Jan <span class="dates">21 - 24</span></h3>
             <p class="card-text"><span class="location">Greensboro</span>Greensboro Coliseum<br />
             <a href="#" class="btn btn-primary">View Detail</a></p>
@@ -93,7 +93,7 @@
     
         <div class="card col-lg-4 col-md-6 col-sm-12">
         <div class="card-body">
-            <img src="https://jky.graphics/UMG/assets/img/location-portland.jpg" class="card-img-top" alt="Jan 27-30, Portland">
+            <img src="https://jky.graphics/UMG/assets/img/location-portland.jpg" class="card-img-top" alt="Jan 27-30, Portland" />
             <h3 class="card-title">Jan <span class="dates">27 - 30</span></h3>
             <p class="card-text"><span class="location">Portland</span>Rose Garden Arena<br />
             <a href="#" class="btn btn-primary">View Detail</a></p>
@@ -102,11 +102,7 @@
     
         <div class="card col-lg-4 col-md-6 col-sm-12">
         <div class="card-body">
-<<<<<<< HEAD
-            <img src="https://jky.graphics/UMG/assets/img/location-idaho.jpg" class="card-img-top" alt="Feb 2-3, Nampa">
-=======
-            <img src="https://jky.graphics/UMG/assets/img/location-idaho.jpg" class="card-img-top" alt="...">
->>>>>>> 9844836426a21d619e3c6d9a61a1282345ce7d2a
+            <img src="https://jky.graphics/UMG/assets/img/location-idaho.jpg" class="card-img-top" alt="Feb 2-3, Nampa" />
             <h3 class="card-title">Feb <span class="dates">2 - 3</span></h3>
             <p class="card-text"><span class="location">Nampa</span>Ford Arean<br />
             <a href="#" class="btn btn-primary">View Detail</a></p>
@@ -115,11 +111,7 @@
 
         <div class="card col-lg-4 col-md-6 col-sm-12">
         <div class="card-body">
-<<<<<<< HEAD
             <img src="https://jky.graphics/UMG/assets/img/location-twinLakes.jpg" class="card-img-top" alt="Feb 5 - 7, Twin Lakes">
-=======
-            <img src="https://jky.graphics/UMG/assets/img/location-twinLakes.jpg" class="card-img-top" alt="...">
->>>>>>> 9844836426a21d619e3c6d9a61a1282345ce7d2a
             <h3 class="card-title">Feb <span class="dates">5-7</span></h3>
             <p class="card-text"><span class="location">Twin Lakes</span>Country Thunder Festival<br />
             <a href="#" class="btn btn-primary">View Detail</a></p>
@@ -128,11 +120,7 @@
 
         <div class="card col-lg-4 col-md-6 col-sm-12">
         <div class="card-body">
-<<<<<<< HEAD
             <img src="https://jky.graphics/UMG/assets/img/location-losAngeles.jpg" class="card-img-top" alt="Feb 9 - 11, Los Angeles">
-=======
-            <img src="https://jky.graphics/UMG/assets/img/location-losAngeles.jpg" class="card-img-top" alt="...">
->>>>>>> 9844836426a21d619e3c6d9a61a1282345ce7d2a
             <h3 class="card-title">Feb <span class="dates">9-11</span></h3>
             <p class="card-text"><span class="location">Los Angeles</span>Staple Center<br />
             <a href="#" class="btn btn-primary">View Detail</a></p>
@@ -141,11 +129,7 @@
 
         <div class="card col-lg-4 col-md-6 col-sm-12">
         <div class="card-body">
-<<<<<<< HEAD
             <img src="https://jky.graphics/UMG/assets/img/location-sanDiego.jpg" class="card-img-top" alt="Feb 13 - 15, San Diego">
-=======
-            <img src="https://jky.graphics/UMG/assets/img/location-sanDiego.jpg" class="card-img-top" alt="...">
->>>>>>> 9844836426a21d619e3c6d9a61a1282345ce7d2a
             <h3 class="card-title">Feb <span class="dates">13-15</span></h3>
             <p class="card-text"><span class="location">San Diego</span>Valley View Casino Center<br />
             <a href="#" class="btn btn-primary">View Detail</a></p>
