--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -34,7 +34,6 @@
   </div>
   <!-- Carousel Ends-->
 
-
   <div class="codeContainer lavendar">
     <div class="code code--small code--left musicTrack" data-aos="fade-up">
       <h1 class="quote">"Never give up on something you love"</h1>
@@ -56,11 +55,11 @@
       </div>
       <div class="videoContainer" id="youTubeVid">
 
-        <iframe width="100%" height="500px" src="https://www.youtube.com/embed/tcYodQoapMg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="100%" height="500px" src="https://www.youtube.com/embed/BnyvDBGojoQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <iframe width="100%" height="500px" src="https://www.youtube.com/embed/kHLHSlExFis" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-        <iframe width="100%" height="500px" src="https://www.youtube.com/embed/AoAm4om0wTs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="100%" height="500px" src="https://www.youtube.com/embed/ffxKSjUwKdU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
       </div>
       <div class="clearDiv">&nbsp;</div>
@@ -87,7 +86,10 @@
             <img src="https://jky.graphics/UMG/assets/img/location-northCarolina.jpg" class="card-img-top" alt="Jan 21-24, Greeensboro" />
             <h3 class="card-title">Jan <span class="dates">21 - 24</span></h3>
             <p class="card-text"><span class="location">Greensboro</span>Greensboro Coliseum<br />
-            <a href="#" class="btn btn-primary">View Detail</a></p>
+            <span class="wrapper btn">
+              <a href="#"><span>View Detail</span></a>
+            </span>
+          </p>
         </div>
         </div>
     
@@ -96,7 +98,9 @@
             <img src="https://jky.graphics/UMG/assets/img/location-portland.jpg" class="card-img-top" alt="Jan 27-30, Portland" />
             <h3 class="card-title">Jan <span class="dates">27 - 30</span></h3>
             <p class="card-text"><span class="location">Portland</span>Rose Garden Arena<br />
-            <a href="#" class="btn btn-primary">View Detail</a></p>
+              <span class="wrapper btn">
+                <a href="#"><span>View Detail</span></a>
+              </span>
         </div>
         </div>
     
@@ -105,7 +109,9 @@
             <img src="https://jky.graphics/UMG/assets/img/location-idaho.jpg" class="card-img-top" alt="Feb 2-3, Nampa" />
             <h3 class="card-title">Feb <span class="dates">2 - 3</span></h3>
             <p class="card-text"><span class="location">Nampa</span>Ford Arean<br />
-            <a href="#" class="btn btn-primary">View Detail</a></p>
+              <span class="wrapper btn">
+                <a href="#"><span>View Detail</span></a>
+              </span>
         </div>
         </div>
 
@@ -114,7 +120,9 @@
             <img src="https://jky.graphics/UMG/assets/img/location-twinLakes.jpg" class="card-img-top" alt="Feb 5 - 7, Twin Lakes">
             <h3 class="card-title">Feb <span class="dates">5-7</span></h3>
             <p class="card-text"><span class="location">Twin Lakes</span>Country Thunder Festival<br />
-            <a href="#" class="btn btn-primary">View Detail</a></p>
+              <span class="wrapper btn">
+                <a href="#"><span>View Detail</span></a>
+              </span>
         </div>
         </div>
 
@@ -123,7 +131,9 @@
             <img src="https://jky.graphics/UMG/assets/img/location-losAngeles.jpg" class="card-img-top" alt="Feb 9 - 11, Los Angeles">
             <h3 class="card-title">Feb <span class="dates">9-11</span></h3>
             <p class="card-text"><span class="location">Los Angeles</span>Staple Center<br />
-            <a href="#" class="btn btn-primary">View Detail</a></p>
+              <span class="wrapper btn">
+                <a href="#"><span>View Detail</span></a>
+              </span>
         </div>
         </div>
 
@@ -132,7 +142,9 @@
             <img src="https://jky.graphics/UMG/assets/img/location-sanDiego.jpg" class="card-img-top" alt="Feb 13 - 15, San Diego">
             <h3 class="card-title">Feb <span class="dates">13-15</span></h3>
             <p class="card-text"><span class="location">San Diego</span>Valley View Casino Center<br />
-            <a href="#" class="btn btn-primary">View Detail</a></p>
+              <span class="wrapper btn">
+                <a href="#"><span>View Detail</span></a>
+              </span>
         </div>
         </div>
     
@@ -153,13 +165,17 @@
               <img class="merchImage" src="https://jky.graphics/UMG/assets/img/merch-sweater.png" alt="Positin Sweater" />
               <div class="merchName">Positions Photo Longsleeve T-shirt II</div>
               <div class="merchPrice">$45.00</div>
-              <a href="#" class="btn btn-primary">Add to Cart</a>
+              <span class="wrapper btn big">
+                <a href="#"><span>Add to Cart</span></a>
+              </span>
             </div>
             <div class="merchCell col-lg-6 col-12">
               <img class="merchImage" src="https://jky.graphics/UMG/assets/img/merch-album.png" alt="Position Album" />
               <div class="merchName">Positions LP</div>
               <div class="merchPrice">$28.00</div>
-              <a href="#" class="btn btn-primary">Add to Cart</a>
+              <span class="wrapper btn big">
+                <a href="#"><span>Add to Cart</span></a>
+              </span>
             </div>
           </div>
           <div class="clearDiv">&nbsp;</div>
@@ -174,102 +190,129 @@
 <div class="codeContainer shuffle">
     <div class="code code--small code--left" data-aos="fade-up">
       <div class="btn-group filter-options">
-        <button class="btn btn--primary" data-group="Sweaters">Sweaters</button>
-        <button class="btn btn--primary" data-group="Albums">Albums</button>
-        <button class="btn btn--primary" data-group="Merch">Merch</button>
+        
+        <span class="wrapper btn tab" data-group="Sweaters">Sweaters</span>
+        <span class="wrapper btn tab" data-group="Albums">Albums</span>
+        <span class="wrapper btn tab" data-group="Merch">Merch</span>
       </div>
     
       <div id="grid" class="row my-shuffle-container">
       
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Sweaters"]' data-date-created="2017-04-30" data-title="Lake Walchen">
           <img src="https://jky.graphics/UMG/assets/img/merch-sweater.png" alt="Position Sweater" />
-          <div class="merchName">Positions Photo Longsleeve T-shirt II</div>
+          <div class="merchName">Positions Photo Longsleeve T-shirt</div>
           <div class="merchPrice">$45.00</div>
-          <a href="#" class="btn btn-primary">Add to Cart</a>
+          <span class="wrapper btn">
+            <a href="#"><span>Add to Cart</span></a>
+          </span>
         </figure>
 
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Albums"]' data-date-created="2017-04-30" data-title="Lake Walchen">
           <img src="https://jky.graphics/UMG/assets/img/merch-album.png" alt="Position Sweater" />
           <div class="merchName">Positions LP</div>
           <div class="merchPrice">$28.00</div>
-          <a href="#" class="btn btn-primary">Add to Cart</a>
+          <span class="wrapper btn">
+             <a href="#"><span>Add to Cart</span></a>
+           </span>
         </figure>
 
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Sweaters"]' data-date-created="2017-04-30" data-title="Lake Walchen">
           <img src="https://jky.graphics/UMG/assets/img/merch-shirt.png" alt="Position Sweater" />
-          <div class="merchName">Positions Photo Longsleeve T-shirt II</div>
+          <div class="merchName">Positions Photo Longsleeve T-shirt</div>
           <div class="merchPrice">$45.00</div>
-          <a href="#" class="btn btn-primary">Add to Cart</a>
+          <span class="wrapper btn">
+             <a href="#"><span>Add to Cart</span></a>
+           </span>
         </figure>
 
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Albums"]' data-date-created="2017-04-30" data-title="Lake Walchen">
          <img src="https://jky.graphics/UMG/assets/img/merch-album2.png" alt="Position Sweater" />
          <div class="merchName">Positions LP</div>
           <div class="merchPrice">$28.00</div>
-          <a href="#" class="btn btn-primary">Add to Cart</a>
+          <span class="wrapper btn">
+             <a href="#"><span>Add to Cart</span></a>
+           </span>
         </figure>
 
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Sweaters"]' data-date-created="2017-04-30" data-title="Lake Walchen">
           <img src="https://jky.graphics/UMG/assets/img/merch-sweater.png" alt="Position Sweater" />
-          <div class="merchName">Positions Photo Longsleeve T-shirt II</div>
+          <div class="merchName">Positions Photo Longsleeve T-shirt</div>
           <div class="merchPrice">$45.00</div>
-          <a href="#" class="btn btn-primary">Add to Cart</a>
+          <span class="wrapper btn">
+             <a href="#"><span>Add to Cart</span></a>
+           </span>
         </figure>
 
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Merch"]' data-date-created="2017-04-30" data-title="Lake Walchen">
           <img src="https://jky.graphics/UMG/assets/img/merch-album3.png" alt="Position Sweater" />
-          <div class="merchName">Positions Photo Longsleeve T-shirt II</div>
+          <div class="merchName">Positions Photo Longsleeve T-shirt</div>
           <div class="merchPrice">$45.00</div>
-          <a href="#" class="btn btn-primary">Add to Cart</a>
+          <span class="wrapper btn">
+             <a href="#"><span>Add to Cart</span></a>
+           </span>
         </figure>
 
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Albums"]' data-date-created="2017-04-30" data-title="Lake Walchen">
           <img src="https://jky.graphics/UMG/assets/img/merch-album.png" alt="Position Sweater" />
           <div class="merchName">Positions LP</div>
           <div class="merchPrice">$28.00</div>
-          <a href="#" class="btn btn-primary">Add to Cart</a>
+          <span class="wrapper btn">
+             <a href="#"><span>Add to Cart</span></a>
+           </span>
         </figure>
 
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Sweaters"]' data-date-created="2017-04-30" data-title="Lake Walchen">
           <img src="https://jky.graphics/UMG/assets/img/merch-sweater.png" alt="Position Sweater" />
-          <div class="merchName">Positions Photo Longsleeve T-shirt II</div>
+          <div class="merchName">Positions Photo Longsleeve T-shirt</div>
           <div class="merchPrice">$45.00</div>
-          <a href="#" class="btn btn-primary">Add to Cart</a>
+          <span class="wrapper btn">
+             <a href="#"><span>Add to Cart</span></a>
+           </span>
         </figure>
         
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Sweaters"]' data-date-created="2017-04-30" data-title="Lake Walchen">
           <img src="https://jky.graphics/UMG/assets/img/merch-sweater2.png" alt="Position Sweater" />
-          <div class="merchName">Positions Photo Longsleeve T-shirt II</div>
+          <div class="merchName">Positions Photo Longsleeve T-shirt</div>
           <div class="merchPrice">$45.00</div>
-          <a href="#" class="btn btn-primary">Add to Cart</a>
+          <span class="wrapper btn">
+             <a href="#"><span>Add to Cart</span></a>
+           </span>
         </figure>
 
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Merch"]' data-date-created="2017-04-30" data-title="Lake Walchen">
           <img src="https://jky.graphics/UMG/assets/img/merch-album3.png" alt="Position Sweater" />
           <div class="merchName">Positions Deluxe CD Box</div>
           <div class="merchPrice">$50.00</div>
-          <a href="#" class="btn btn-primary">Add to Cart</a>
+          <span class="wrapper btn">
+             <a href="#"><span>Add to Cart</span></a>
+           </span>
         </figure>
 
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Sweaters"]' data-date-created="2017-04-30" data-title="Lake Walchen">
           <img src="https://jky.graphics/UMG/assets/img/merch-sweater2.png" alt="Position Sweater" />
-          <div class="merchName">Positions Photo Longsleeve T-shirt II</div>
+          <div class="merchName">Positions Photo Longsleeve T-shirt</div>
           <div class="merchPrice">$45.00</div>
-          <a href="#" class="btn btn-primary">Add to Cart</a>
+          <span class="wrapper btn">
+             <a href="#"><span>Add to Cart</span></a>
+           </span>
         </figure>
 
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Sweaters"]' data-date-created="2017-04-30" data-title="Lake Walchen">
           <img src="https://jky.graphics/UMG/assets/img/merch-shirt.png" alt="Position Sweater" />
-          <div class="merchName">Positions Photo Longsleeve T-shirt II</div>
+          <div class="merchName">Positions Photo Longsleeve T-shirt</div>
           <div class="merchPrice">$45.00</div>
-          <a href="#" class="btn btn-primary">Add to Cart</a>
+          <span class="wrapper btn">
+             <a href="#"><span>Add to Cart</span></a>
+           </span>
         </figure>
 
         <figure class="col-3@xs col-4@sm col-3@md picture-item" data-groups='["Sweaters"]' data-date-created="2017-04-30" data-title="Lake Walchen">
           <img src="https://jky.graphics/UMG/assets/img/merch-sweater.png" alt="Position Sweater" />
-          <div class="merchName">Positions Photo Longsleeve T-shirt II</div>
+          <div class="merchName">Positions Photo Longsleeve T-shirt</div>
           <div class="merchPrice">$45.00</div>
-          <a href="#" class="btn btn-primary">Add to Cart</a>
+          <span class="wrapper btn">
+             <a href="#"><span>Add to Cart</span></a>
+           </span>
         </figure>
       
       </div>
